# numeric-rust-python-tutorial

./: .gitignore  Cargo.toml  Readme.md  index.html  license.txt  pyproject.toml
benches/: maximize.rs
data/: covs.npy  means.npy  responsibilities.npy  weights.npy
examples/: 1-maximization_c_style.rs  2-maximization_iterators.rs  3-maximization_functional.rs  4-maximization_parallel.rs  maximization_c_style.rs  maximization_template.rs  read_data.rs
examples/data/: means.npy  responsibilities.npy
src/python/gmm/: __init__.py
src/rust/: lib.rs
tutorial/: GMM.ipynb
