[package]
name = "rust-python-ndarray-tutorial"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/rust/lib.rs" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
ndarray = { version = "0.15.6", features = ["rayon"] }

[dev-dependencies]
tracing = "0.1.37"
