[package]
name = "rust-python-ndarray-tutorial"
version = "0.1.0"
edition = "2021"

[lib]
name = "gmm"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.11.0"
ndarray = { version = "0.15.6", features = ["rayon", "approx"] }
numpy = "0.19.0"
pyo3 = { version = "0.19.1", features = ["extension-module"]}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
ndarray-npy = "0.8.1"
plotters = "0.3.5"
tracing = "0.1.37"

[[bench]]
harness = false
name = "maximize"
