[tool.poetry]
name = "rust-python-ndarray-tutorial"
version = "0.1.0"
description = "A tutorial for writing numerical Python extensions with Rust and `ndarray`"
authors = ["Stefan Ulbrich <6009224+StefanUlbrich@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rust_python_ndarray_tutorial"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
design-by-contract = "^0.3.1"
numpy = "^1.25.1"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
jupyterlab = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
